<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.josh.simplequizzer.UI.QuizActivity"
        android:background="#303030"
>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/question_view"
            android:contentDescription="@string/text_for_question" tools:text="@string/question_1"
            android:typeface="normal"
            android:padding="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center" android:textSize="24sp" android:fontFamily="casual"
            android:textColor="@android:color/white"/>
    <Button
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="#5A595B"
            android:fontFamily="casual"/>
    <RadioGroup
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/user_choices_group"
            android:layout_width="0dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintTop_toBottomOf="@+id/question_view">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hard_difficulty_radio"
                app:layout_constraintBottom_toTopOf="@+id/easy_difficulty_radio_1"
                android:layout_marginBottom="8dp" android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" android:layout_weight="1"
                tools:text="@string/easy_question_1" android:textSize="14sp" android:fontFamily="casual"
                android:buttonTint="@android:color/background_light" android:textColor="#669900"
                app:buttonTint="#669900"/>
        <RadioButton
                android:textColor="#669900"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/easy_difficulty_radio_1"
                app:layout_constraintBottom_toTopOf="@+id/easy_difficulty_radio_1"
                android:layout_marginBottom="8dp" android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" android:layout_weight="1"
                tools:text="@string/easy_question_1" android:textSize="14sp" android:fontFamily="casual"
                android:buttonTint="@android:color/background_light" app:buttonTint="#669900"/>
        <RadioButton
                android:textColor="#669900"
                tools:text="@string/easy_question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/easy_difficulty_radio_2"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/easy_difficulty_radio_2"
                android:layout_marginBottom="7dp" android:layout_marginStart="16dp" android:layout_weight="1"
                android:textSize="14sp" android:fontFamily="casual"
                android:buttonTint="@android:color/background_light" app:buttonTint="#669900"/>
        <RadioButton
                android:textColor="#669900"
                tools:text="@string/easy_question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/easy_difficulty_radio_3"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toTopOf="@+id/easy_difficulty_radio_3"
                android:layout_marginBottom="12dp" android:layout_marginStart="16dp" android:layout_weight="1"
                android:fontFamily="casual" android:buttonTint="@android:color/background_light"
                app:buttonTint="#669900"/>
        <RadioButton
                android:textColor="#669900"
                tools:text="@string/normal_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/normal_difficulty_radio" tools:layout_constraintBottom_creator="1"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="73dp" app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp" android:layout_weight="1" android:fontFamily="casual"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:buttonTint="@android:color/background_light" app:buttonTint="#669900"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
